assets/css/style.css
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

* {
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

body {
    height: 100vh;
    width: 100vw;
    background-color: var(--menu-bkgcolor);
    color: var(--main-text-color);
    font-family: 'Merriweather';
    position: fixed;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#page {
  display: flex;
  flex-direction: row
}

#forecast {
  min-width: var(--forecast-minwidth);
  height: var(--forecast-height);
  background-color: var(--forecast-bkgcolor);
  margin-right: var(--forecast-marginright);
  font-size: var(--forecast-fontsize);
}

h2 {
  font-size: 1em;
  margin-bottom: .5vw;
  padding: 0 1vw 0 1vw;
  text-shadow: var(--base-textshadow)
}

.forecast-card {
  background-color: var(--forecast-card-bkgcolor);
  min-width: var(--forecast-card-minwidth);
  height: var(--forecast-card-height);
  margin: var(--forecast-card-margin);
  padding: var(--forecast-card-padding);
  background-image: cover;
}

header {
  justify-self: stretch;
  width: var(--header-width);
  display: flex;
  flex-direction: row;
  justify-content: center;
}
#title-header {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  margin-left: var(--title-header-marginleft);
}

#crystal-ball {
  padding-top: var(--crystalball-paddingtop);
  height: var(--crystalball-height);

}
h1{
  text-align: center;
  align-self: flex-start;
  font-size: var(--h1-textsize);
  width: var(--h1-width);
  padding: var(--h1-padding);
  background-color: var(--h1-bkgcolor);
  border: solid var(--h1-bordersize); 
  border-radius: var(--h1-border-radius);
  text-shadow: var(--base-textshadow)
}

.info {
  margin-right: var(--info-marginright);
  opacity: 1;
}

#info-display {
  animation: fadeIn ease-in 6s;
  min-width: 12.5vw;
  display: flex;
  flex-direction: column;
  align-self: start;
  margin: var(--info-display-margin);
  text-shadow: var(--info-textshadow);
}

.weather-icon-main {
  padding-right: 2vw;
}
#selection {
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  width: var(--selection-width);
  height: var(--selection-height);
}

#navigation {
  display:flex;
  flex-direction: column;
  margin-left: var(--navigation-marginleft)
}

#canvas {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 0;
    height: 100vh;
    width: 100vw;
}

#content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  position: relative;
  z-index: 1;
  min-height: 100%;
  min-width: var(--content-minwidth);
}

#search {
  display: inherit;
  justify-self: center;
  margin: var(--search-margin);
  height: var(--search-height);
  padding-left: var(--search-paddingleft);
  min-width: var(--search-minwidth);
  max-height: var(--search-minheight);
  background-image: url(../images/icons/search.png);
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position: left center;
  transition: max-height 2.5s ease-out, padding 2s, ease-out;
}


#search input {
  margin: var(--searchinput-margin);
  padding: var(--searchinput-padding);
  font-size: 0;
  overflow: hidden;
  background: var(--searchinput-bkgcolor);
  height:0;
  width:0;
  border: 0;
  border-radius: var(--searchinput-border-radius);
  opacity: 0;
  /* transition: opacity .5s ease-in-out; */
  outline: none;
  text-align: center;
  color: var(--searchinput-text-color);
  transition: border .5s ease-in, font-size .5s ease-in, opacity 1s ease-in-out, width .5s ease-in-out, height 1s ease-in-out;
}

#search:hover input {
  border: var(--searchinput-hover-border);
  padding: var(--searchinput-hover-padding);
  margin-left: var(--searchinput-hover-marginleft);
  width: var(--searchinput-hover-width); /* Adjusted width to account for padding */
  max-height: var(--searchinput-hover-maxheight);
  height: var(--searchinput-hover-height);
  font-size: var(--searchinput-hover-textsize);
  opacity: var(--searchinput-hover-opacity);
}

#search:focus-within input {
  border: var(--search-focuswithin-border);
  padding: var(--search-focuswithin-padding);
  width: var(--search-focuswithin-width); /* Adjusted width to account for padding */
  max-height: var(--search-focuswithin-maxheight);
  height: var(--search-focuswithin-height);
  margin-left: var(--search-focuswithin-marginleft);
  font-size: var(--search-focuswithin-textsize);
  opacity: var(--search-focuswithin-opacity);
}
/* padding .5s ease-in,*/


.gallery {
  width: var(--gallery-width);
  height: var(--gallery-height);
  background-color: var(--gallery-bkgcolor)
}


.gallery-cell {
  width: var(--gallerycell-width);
  height: var(--gallerycell-height);
  background: var(--gallerycell-bkgcolor);
  
  counter-increment: gallery-cell;
  text-shadow: var(--info-textshadow);
  padding: var(--gallerycell-padding);
  -webkit-box-sizing: content-box !important;
  box-sizing: content-box !important;
}
/* 
cell number */ */
.gallery-cell:before {

  text-align: center;
  content: counter(gallery-cell);
  line-height: var(--gallerycell-lineheight);
  font-size: var(--gallerycell-textsize);
  color: var(--gallerycell-textcolor);
}
.flickity-viewport > * {
  -webkit-box-sizing: content-box !important;
  box-sizing: content-box !important;
}


/* Responsive Layout for mobile devices*/
/*Extra small devices (phones, 600px and down)*/
@media only screen and (max-width: 600px) {
  header {
    flex-direction: column;
  }
  #title-header {
    margin-left: 0;
    margin-right: calc(30vw - var(--forecast-minwidth));
  }
  #info-display {
    padding-left: calc(20vw - var(--forecast-minwidth));
    margin-top: 15vh;
  }
  #forecast {
    margin-right: 0;
  }
  .forecast-card {
    font-size: 2.25vw
  }
  .gallery, .flickity-viewport {
    height: 7.5vh;
    margin-bottom: 5vh;
  }
  #navigation{
  margin-left: 0;
  padding: 0;
  }
}
/*Small devices (portrait tablets and large phones, 600px and up)*/
@media only screen and (min-width: 600px) {
  header {
    flex-direction: column;
  }
  #title-header {
    margin-left: 0;
    margin-right: calc(30vw - var(--forecast-minwidth));
  }
  #info-display {
    padding-left: calc(20vw - var(--forecast-minwidth));
    margin-top: 15vh;
  }
  #forecast {
    margin-right: 0;
  }
  .forecast-card {
    font-size: 2.25vw
  }
  .gallery, .flickity-viewport {
    height: 7.5vh;
    margin-bottom: 5vh;
  }
  #navigation{
  margin-left: 0;
  padding: 0;
  }
}
/* Medium devices (landscape tablets, 768px and up)*/
@media only screen and (min-width: 768px) {...}
/* Large devices (laptops/desktops, 992px and up)*/
@media only screen and (min-width: 992px) {...}
/* Extra large devices (large laptops and desktops, 1200px and up)*/
@media only screen and (min-width: 1200px) {...}

